manifests/deployment-green.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: sk009-fastapi-ml-serving-green
  namespace: skala3-ai1
  labels:
    app: sk009-zero-dtd-test
    version: 2.0.0
    track: green
spec:
  replicas: 3
  strategy:
    type: Recreate
  selector:
    matchLabels:
      app: sk009-zero-dtd-test
      track: green
  template:
    metadata:
      labels:
        app: sk009-zero-dtd-test
        version: 2.0.0
        track: green
    spec:
      securityContext:
        fsGroup: 1000
      volumes:
        - name: app-logs
          emptyDir: {}
        - name: sk009-fluentd-pos
          emptyDir: {}
        - name: sk009-fluentd-config
          configMap:
            name: sk009-fluentd-config

      containers:
        - name: sk009-fastapi-ml-serving
          image: amdp-registry.skala-ai.com/skala26a-ai1/sk009-fastapi-ml-serving:latest
          imagePullPolicy: Always
          ports:
            - containerPort: 8000
          resources:
            requests:
              cpu: "100m"
              memory: "256Mi"
            limits:
              cpu: "500m"
              memory: "512Mi"
          volumeMounts:
            - name: app-logs
              mountPath: /var/log/app
          livenessProbe:
            httpGet:
              path: /health
              port: 8000
            initialDelaySeconds: 10
            periodSeconds: 15
          readinessProbe:
            httpGet:
              path: /health
              port: 8000
            initialDelaySeconds: 5
            periodSeconds: 10
        - name: sk009-fluentd
          image: fluent/fluentd:v1.16-1
          resources:
            requests:
              cpu: "50m"
              memory: "64Mi"
            limits:
              cpu: "100m"
              memory: "128Mi"
          volumeMounts:
            - name: app-logs
              mountPath: /var/log/app
            - name: sk009-fluentd-pos
              mountPath: /var/log/fluentd
            - name: sk009-fluentd-config
              mountPath: /fluentd/etc
