manifests/service-bluegreen.yaml
apiVersion: v1
kind: Service
metadata:
  name: sk009-blue
  namespace: skala3-ai1
  labels:
    app: sk009-zero-dtd-test
    track: blue
spec:
  type: ClusterIP
  selector:
    app: sk009-zero-dtd-test
    track: blue                  # Blue Pod만 선택
  ports:
    - name: http
      port: 80
      targetPort: 8000
      protocol: TCP
---
apiVersion: v1
kind: Service
metadata:
  name: sk009-green
  namespace: skala3-ai1
  labels:
    app: sk009-zero-dtd-test
    track: green
spec:
  type: ClusterIP
  selector:
    app: sk009-zero-dtd-test
    track: green                 # Green Pod만 선택
  ports:
    - name: http
      port: 80
      targetPort: 8000
      protocol: TCP
