manifests/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: sk009-fastapi-ml-serving
  namespace: skala3-ai1
  labels:
    app: sk009-fastapi-ml-serving
spec:
  type: ClusterIP
  selector:
    app: sk009-fastapi-ml-serving
  ports:
    - name: http
      port: 80
      targetPort: 8000
      protocol: TCP
