manifests/ingress-bluegreen.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: sk009-ingress-bluegreen
  namespace: skala3-ai1
  labels:
    app: sk009-zero-dtd-test
  annotations:
    kubernetes.io/ingress.class: "public-nginx"
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  ingressClassName: public-nginx
  rules:
    - host: ingress.sk009.project.skala-ai.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: sk009-blue    # 초기: blue로 설정 / 전환 시 green으로 변경
                port:
                  number: 80
